Closing the GUI also closes the Feedback Controller.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Changes in ???
 
   * Added CMD_QUIT_FEEDBACK_CONTROLLER to bcixml to allow remote killing of the
     Feedback Controller
+  * Closing the GUI also closes the Feedback Controller now
   * Automatic Subclass finding finally removed
   * Replaced all print-stacktraces with logging.exception
   * Shutdown logger properly to flush all buffers before exiting
